Fix DNS challenge configuration

--- a/pangolin/.env
+++ b/pangolin/.env
@@ -30,3 +30,7 @@ TRAEFIK_ACME_EMAIL=admin@m3w.ch
 
 # Enable the Traefik dashboard
 TRAEFIK_ENABLE_DASHBOARD=false
+
+# The provider of the DNS challenge, please visit the docs:
+# https://doc.traefik.io/traefik/https/acme/#providers
+TRAEFIK_ACME_DNS_PROVIDER=CHANGE_ME
