--- a/pangolin/compose.yaml
+++ b/pangolin/compose.yaml
@@ -8,7 +8,7 @@ services:
     image: fosrl/pangolin:${PANGOLIN_VERSION}
     restart: unless-stopped
     volumes:
-      - ./config:/app/config
+      - ./pangolin-data:/app/config
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3001/api/v1/"]
       interval: "3s"
@@ -48,7 +48,7 @@ services:
       - 443:443
       - 80:80
     volumes:
-      - ./config/:/var/config
+      - ./pangolin-data:/var/config
 
   traefik:
     container_name: traefik
@@ -96,4 +96,4 @@ services:
     network_mode: service:gerbil
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./config/letsencrypt:/letsencrypt
+      - ./pangolin-data/letsencrypt:/letsencrypt
